panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_typedef_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_typedef_struct.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unexpected token `value` of kind `Identifier`
   ╭─[panko/tests/cases/execute/typedef/test_typedef_struct.c:7:10]
   │
 7 │     Name value = {42};
   │          ──┬──  
   │            ╰──── expected one of the following token kinds: [";", ",", "=", "*", "(", "[", "+", "-", "/", "%", "==", "!=", "<", "<=", ">", ">=", "&", "^", "|", "<<", ">>", "*=", "/=", "%=", "+=", "-=", "<<=", ">>=", "&=", "^=", "|=", "&&", "||", "?", "++", "--", ".", "->"]
───╯
